# rust-grpc-sky

./: .editorconfig  .gitignore  Cargo.toml  README.md  develop.sh
api/: Cargo.toml  build.rs
api/proto/sky/: post_service.proto  resources.proto  user.proto  user_service.proto
api/proto/sky/error/: error.proto
api/src/: dto.rs  error.rs  lib.rs
infrastructure/: develop.sh  docker-compose.yaml
infrastructure/db/: migrate.dockerfile
infrastructure/db/migrations/: 000001_init.up.sql
service/: Cargo.toml
service/config/: default.toml
service/src/: config.rs  context.rs  error.rs  lib.rs  main.rs  signal.rs
service/src/post/: adapter.rs  create_command.rs  mod.rs  query_manager.rs
service/src/post/repository/: mod.rs  mysql.rs
service/src/tracing/: tracer.rs
service/src/user/: adapter.rs  mod.rs  sign_up_command.rs
service/src/user/repository/: mod.rs  mysql.rs
