[package]
name = "grpc_sky_api"
publish = false
edition = "2021"

[lib]
name = "grpc_sky_api"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.6"
prost = "0.13.4"
tonic = { version = "0.12.3", features = ["prost"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
regex = "1.11.1"
paste = "1.0.15"

bomboni_common.workspace = true
bomboni_proto.workspace = true
bomboni_request = { workspace = true, features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13.4"
bomboni_prost.workspace = true
