[package]
name = "grpc_sky_service"
publish = false
edition = "2021"

[[bin]]
name = "grpc_sky_service"
path = "src/main.rs"

[dependencies]
grpc_sky_api = { path = "../api" }
thiserror = "2.0.5"
config = "0.14.1"
serde = "1.0.215"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }

tonic = { version = "0.12.3", features = ["prost"] }
tonic-reflection = "0.12.3"

bomboni_proto = "0.1.61"
bomboni_request = { version = "0.1.61", features = ["derive", "tonic"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing-opentelemetry = "0.28.0"
tracing-futures = "0.2.5"
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-stdout = "0.27.0"
